--- a/1.3
+++ b/1.3
@@ -6,7 +6,7 @@ def fibsys(x):
         i += 1
     Fib = Fib[::-1] 
     ans = ''
-    for i in range(len(Fib_nom)): #переводим введенное число в ССФ
+    for i in range(len(Fib)): #переводим введенное число в ССФ
         if Fib[i] > x:
             ans += '0'
         if Fib[i] <= x:
